# 2023-tutorial

./: .gitignore  README.md
slides/: 01-parallel_compute.pptx  02-MPI.pptx
w01t1/: .gitignore  Makefile  README.md  main.c
w01t2/: .gitignore  README.md  config.py  decrypt.py  encrypt.py  exploit.py
w01t3/: README.md
w02t1/: README.md  answer.md
w03t1/: Makefile  README.md  func.cc
w03t2/: Makefile  MatMul.cc  README.md
w04example/: Allreduce_stddev  Makefile  compare_bcast  deadlock_ring  deadlock_ring.c  env.sh  mpi_helloworld  pingpong  pingpong.c  reduce_avg  ring  scatter_gather_avg  tmp.txt
w05example/: ReadME.md
w05example/CMakeExample/: CMakeLists.txt
w05example/CMakeExample/inc/: b.h  c.h
w05example/CMakeExample/src/: b.cc
w05example/Example/: a.cc
w05example/Example/inc/: c.h
w05example/MakeExample/: Makefile
w05example/MakeExample/src/: c.cc
